# FirstGame

./: .gitignore  LICENSE  README.md  Words.txt  pyproject.toml  run_tests.py  start_game.py
functions/: UserInputIntReader.py  find.py  nltk_functions.py  print.py  validation.py
src/words_guessing_game_banbar1/: main_game_func.py  run_game.py  words.txt
src/words_guessing_game_banbar1/functions/: UserInputIntReader.py  find.py  validation.py  word_loader.py
src/words_guessing_game_banbar1/ui/: __init__.py  animations.py  constants.py  end_screen.py  game_screen.py  setup_screen.py  ui_components.py
tests/: __init__.py  conftest.py  test_game_logic.py  test_game_manager.py
